--- a/AutocompleteTutorial/Views/Shared/_Layout.cshtml
+++ b/AutocompleteTutorial/Views/Shared/_Layout.cshtml
@@ -13,6 +13,10 @@
 </head>
 
 <body>
+    <div class="exampleTitle">
+        Sample: <a href="/Home/Index">C# (SDK)</a> | <a href="/Home/IndexJavaScript">JavaScript (REST API)</a>
+    </div>
+
     <div class="container body-content">
         @RenderBody()
     </div>
