Tweaks to the text in the pages.
Moved the service/key variables to the top of the page in the JavaScript sample.

--- a/AutocompleteTutorial/Views/Home/Index.cshtml
+++ b/AutocompleteTutorial/Views/Home/Index.cshtml
@@ -1,5 +1,9 @@
 ﻿<div class="tutorialBody">
 
+    <div class="example">
+        <h2 class="exampleTitle">ASP.NET MVC using the .Net SDK</h2>
+    </div>
+
     <!-- Suggestions -->
     <div class="example">
         <h2 class="exampleTitle">Suggestions</h2>
