--- a/AutocompleteTutorial/Views/Shared/_Layout.cshtml
+++ b/AutocompleteTutorial/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
 
 <body>
     <div class="exampleTitle">
-        Sample: <a href="/Home/Index">C# (SDK)</a> | <a href="/Home/IndexJavaScript">JavaScript (REST API)</a>
+        Language: <a href="/Home/Index">C#</a> | <a href="/Home/IndexJavaScript">JavaScript</a>
     </div>
 
     <div class="container body-content">
