Fixed issue with last example in the JavaScript version

--- a/AutocompleteTutorial/Views/Home/IndexJavaScript.cshtml
+++ b/AutocompleteTutorial/Views/Home/IndexJavaScript.cshtml
@@ -8,6 +8,7 @@
 
     var suggestUri = "https://" + searchServiceName + ".search.windows.net/indexes/" + indexName + "/docs/suggest?api-version=" + apiVersion;
     var autocompleteUri = "https://" + searchServiceName + ".search.windows.net/indexes/" + indexName + "/docs/autocomplete?api-version=" + apiVersion;
+    var searchUri = "https://" + searchServiceName + ".search.windows.net/indexes/" + indexName + "/docs/search?api-version=" + apiVersion;
 </script>
 
 <div class="tutorialBody">
@@ -339,7 +340,6 @@
             });
         });
     </script>
-
     <br /><br /><br /><br /><br /><br /><br /><br />
     <br /><br /><br /><br /><br /><br /><br /><br />
 </div>
